--- a/aservix_bot/pyproject.toml
+++ b/aservix_bot/pyproject.toml
@@ -4,4 +4,16 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [ 
+    "langgraph",
+    "langchain",
+    "langchain-core",
+    "langchain-openai",
+    "pydantic",
+    "langgraph-checkpoint-postgres",
+    ]
+
+    [project.optional-dependencies]
+dev = [
+    "langgraph-cli[inmem]",
+]
