--- a/aservix_bot/pyproject.toml
+++ b/aservix_bot/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "langgraph-checkpoint-postgres",
     ]
 
-    [project.optional-dependencies]
+[dependency-groups]
 dev = [
-    "langgraph-cli[inmem]",
+    "langgraph-cli[inmem]>=0.4.12",
 ]
+
+  
